--- a/RookieShop.ViewModels/RookieShop.ViewModels.csproj
+++ b/RookieShop.ViewModels/RookieShop.ViewModels.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.14" />
   </ItemGroup>
 
 </Project>
