--- a/RookieShop.BackendAPI/appsettings.json
+++ b/RookieShop.BackendAPI/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Tokens": {
+    "Key": "soft dummy token",
+    "Issuer": "https://github.com"
+  }
 }
