--- a/RookieShop.Shared/RookieShop.Shared.csproj
+++ b/RookieShop.Shared/RookieShop.Shared.csproj
@@ -22,6 +22,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="6.0.2" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.16.0" />
   </ItemGroup>
 
 </Project>
