--- a/RookieShop.BackendAPI/RookieShop.BackendAPI.csproj
+++ b/RookieShop.BackendAPI/RookieShop.BackendAPI.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation.AspNetCore" Version="10.3.6" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.2" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.16.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
