--- a/RookieShop.ViewModels/RookieShop.ViewModels.csproj
+++ b/RookieShop.ViewModels/RookieShop.ViewModels.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation.AspNetCore" Version="10.3.6" />
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.14" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.16.0" />
